[refactor] streaming swaps tweaks #check-lint-warning
